[package]
name = "TheBorker"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_SystemServices"] }
winres = "0.1.12"

[build-dependencies]
winres = "0.1"